{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 52,
  "lineage": "1dfc2c66-6c93-69a6-608a-d3e76444a9ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eipngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ad4960f947820a71",
            "domain": "vpc",
            "id": "eipalloc-008d8139c033dbd11",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07ce437d948c6458a",
            "private_dns": "ip-10-1-1-155.ec2.internal",
            "private_ip": "10.1.1.155",
            "public_dns": "ec2-34-237-198-70.compute-1.amazonaws.com",
            "public_ip": "34.237.198.70",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063787241444:internet-gateway/igw-0be5892706ea9eff8",
            "id": "igw-0be5892706ea9eff8",
            "owner_id": "063787241444",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-0d8fb173ed79fbbc1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008d8139c033dbd11",
            "id": "nat-087ca65c6cdde901a",
            "network_interface_id": "eni-07ce437d948c6458a",
            "private_ip": "10.1.1.155",
            "public_ip": "34.237.198.70",
            "subnet_id": "subnet-0cd44b31212bfeac9"
          },
          "dependencies": [
            "aws_eip.eipngw",
            "aws_subnet.public-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04b300c6d68998b23",
            "owner_id": "063787241444",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-087ca65c6cdde901a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Private_table-testing"
            },
            "vpc_id": "vpc-0d8fb173ed79fbbc1"
          },
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-076559cea6889b6ed",
            "owner_id": "063787241444",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0be5892706ea9eff8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-testing"
            },
            "vpc_id": "vpc-0d8fb173ed79fbbc1"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f560e03b3cb3ae53",
            "route_table_id": "rtb-04b300c6d68998b23",
            "subnet_id": "subnet-0caaa76175d835e84"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01932006b3323ee0d",
            "route_table_id": "rtb-04b300c6d68998b23",
            "subnet_id": "subnet-0f148e5538952956e"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088eb7cadf8a8a64d",
            "route_table_id": "rtb-04b300c6d68998b23",
            "subnet_id": "subnet-01be5e6750e7bca16"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ea74292569faacf",
            "route_table_id": "rtb-04b300c6d68998b23",
            "subnet_id": "subnet-0c0944ac0f7a3d79e"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0603a0fbb6f2d5699",
            "route_table_id": "rtb-04b300c6d68998b23",
            "subnet_id": "subnet-078c498a5959261b0"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c85bd4f0429cda0",
            "route_table_id": "rtb-076559cea6889b6ed",
            "subnet_id": "subnet-0cd44b31212bfeac9"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0bf13a17cddb3f6",
            "route_table_id": "rtb-076559cea6889b6ed",
            "subnet_id": "subnet-0e700239ea8b070eb"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bef3cf9c8fb9a4f8",
            "route_table_id": "rtb-076559cea6889b6ed",
            "subnet_id": "subnet-0c1509a679be80182"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b63e4f9ec631941",
            "route_table_id": "rtb-076559cea6889b6ed",
            "subnet_id": "subnet-09db89c22d9c6c2c8"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f6e7b7bb3b81a41",
            "route_table_id": "rtb-076559cea6889b6ed",
            "subnet_id": "subnet-03ac94e9f907ee861"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063787241444:security-group/sg-06193837a8fa3dffc",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06193837a8fa3dffc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "063787241444",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d8fb173ed79fbbc1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063787241444:subnet/subnet-0caaa76175d835e84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.10.0/24",
            "id": "subnet-0caaa76175d835e84",
            "map_public_ip_on_launch": false,
            "owner_id": "063787241444",
            "tags": {
              "Name": "terraform-aws-testing-Private-subnet-1"
            },
            "vpc_id": "vpc-0d8fb173ed79fbbc1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063787241444:subnet/subnet-0f148e5538952956e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.20.0/24",
            "id": "subnet-0f148e5538952956e",
            "map_public_ip_on_launch": false,
            "owner_id": "063787241444",
            "tags": {
              "Name": "terraform-aws-testing-Private-subnet-2"
            },
            "vpc_id": "vpc-0d8fb173ed79fbbc1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063787241444:subnet/subnet-01be5e6750e7bca16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.30.0/24",
            "id": "subnet-01be5e6750e7bca16",
            "map_public_ip_on_launch": false,
            "owner_id": "063787241444",
            "tags": {
              "Name": "terraform-aws-testing-Private-subnet-3"
            },
            "vpc_id": "vpc-0d8fb173ed79fbbc1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063787241444:subnet/subnet-0c0944ac0f7a3d79e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.40.0/24",
            "id": "subnet-0c0944ac0f7a3d79e",
            "map_public_ip_on_launch": false,
            "owner_id": "063787241444",
            "tags": {
              "Name": "terraform-aws-testing-Private-subnet-4"
            },
            "vpc_id": "vpc-0d8fb173ed79fbbc1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063787241444:subnet/subnet-078c498a5959261b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.50.0/24",
            "id": "subnet-078c498a5959261b0",
            "map_public_ip_on_launch": false,
            "owner_id": "063787241444",
            "tags": {
              "Name": "terraform-aws-testing-Private-subnet-5"
            },
            "vpc_id": "vpc-0d8fb173ed79fbbc1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063787241444:subnet/subnet-0cd44b31212bfeac9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0cd44b31212bfeac9",
            "map_public_ip_on_launch": false,
            "owner_id": "063787241444",
            "tags": {
              "Name": "terraform-aws-testing-Public-subnet-1"
            },
            "vpc_id": "vpc-0d8fb173ed79fbbc1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063787241444:subnet/subnet-0e700239ea8b070eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0e700239ea8b070eb",
            "map_public_ip_on_launch": false,
            "owner_id": "063787241444",
            "tags": {
              "Name": "terraform-aws-testing-Public-subnet-2"
            },
            "vpc_id": "vpc-0d8fb173ed79fbbc1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063787241444:subnet/subnet-0c1509a679be80182",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0c1509a679be80182",
            "map_public_ip_on_launch": false,
            "owner_id": "063787241444",
            "tags": {
              "Name": "terraform-aws-testing-Public-subnet-3"
            },
            "vpc_id": "vpc-0d8fb173ed79fbbc1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063787241444:subnet/subnet-09db89c22d9c6c2c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-09db89c22d9c6c2c8",
            "map_public_ip_on_launch": false,
            "owner_id": "063787241444",
            "tags": {
              "Name": "terraform-aws-testing-Public-subnet-4"
            },
            "vpc_id": "vpc-0d8fb173ed79fbbc1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063787241444:subnet/subnet-03ac94e9f907ee861",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-03ac94e9f907ee861",
            "map_public_ip_on_launch": false,
            "owner_id": "063787241444",
            "tags": {
              "Name": "terraform-aws-testing-Public-subnet-5"
            },
            "vpc_id": "vpc-0d8fb173ed79fbbc1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:063787241444:vpc/vpc-0d8fb173ed79fbbc1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-02a7d33d702e88e78",
            "default_route_table_id": "rtb-01bc4ec6a08f94244",
            "default_security_group_id": "sg-0e064a7837a68d7a0",
            "dhcp_options_id": "dopt-2b39e551",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d8fb173ed79fbbc1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01bc4ec6a08f94244",
            "owner_id": "063787241444",
            "tags": {
              "Name": "terraform-aws-testing",
              "Owner": "Rajesh Singamsetty royal singam",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}